--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,13 @@
 APP_NAME=Challenge
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:vckBwnb0WkGR13HAvd0aY6e6k9Mt+/msOZdaAVbj9Mk=
 APP_DEBUG=true
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=db
 DB_PORT=3306
 DB_DATABASE=challenge
 DB_USERNAME=user_database
